--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <script type="text/javascript" src="js/barcode_controls.js"></script>
   </head>
   <body>
-    <h1>Barcode Scanner</h1>
-    <p>Place the barcode in front of the camera so it's completely in view.</p>
+    <h1>Barcode Tarayıcı</h1>
+    <p>Barkodu tamamen görünecek şekilde kameranın önüne yerleştirin.</p>
     
     <select id="barcode-selector">
       <option value="">Select a type of barcode to scan</option>
-      <option value="1d">Scan 1D Barcode</option>
-      <option value="qr">Scan QR Barcode</option>
+      <option value="1d">1D Barcode Tara</option>
+      <option value="qr">QR kod barkod </option>
     </select>
     <br>
 
