--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Barkodu tamamen görünecek şekilde kameranın önüne yerleştirin.</p>
     
     <select id="barcode-selector">
-      <option value="">Select a type of barcode to scan</option>
+      <option value="">Barkod Tipi Seç</option>
       <option value="1d">1D Barcode Tara</option>
       <option value="qr">QR kod barkod </option>
     </select>
