--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- For 1D barcodes -->
     <div id="quagga"></div>
     <div id="result_strip">
-      <ul class="thumbnails">saban</ul>
+      <ul class="thumbnails"></ul>
     </div>
     
   </body>
