--- a/index.html
+++ b/index.html
@@ -1,47 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Ler Barcode </title>
+<meta charset="utf-8">
+<title>Untitled Document</title>
+	
+	
+	
+	<script src="quagga.min.js"></script>
+	<script src="barcodoce.js"></script>
 </head>
 
 <body>
-
-    <div id="resultado"></div>
-    <div id="camera"></div>
-
-    <script src="quagga.min.js"></script>
-
-    <script>
-
-        Quagga.init({
-            inputStream: {
-                name: "Live",
-                type: "LiveStream",
-                target: document.querySelector('#camera')    // Or '#yourElement' (optional)
-            },
-            decoder: {
-                readers: ["code_128_reader"]
-            }
-        }, function (err) {
-            if (err) {
-                console.log(err);
-                return
-            }
-            console.log("Initialization finished. Ready to start");
-            Quagga.start();
-        });
-
-        Quagga.onDetected(function (data) {
-            console.log(data.codeResult.code);
-            document.querySelector('#resultado').innerText = data.codeResult.code;
-        });
-
-    </script>
-
+	
+	
+	<video id="barcode-capture"></video>
+    <h3 id="barcode-result"></h3>
+    
+    <!-- For 1D barcodes -->
+    <div id="quagga"></div>
+    <div id="result_strip">
+      <ul class="thumbnails"></ul>
+    </div>
+	
+	
+	
+	
+	
 </body>
-
 </html>
