--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div id="resultado"></div>
     <div id="camera"></div>
-
+    <div id="resultado"></div>
 
 
 
@@ -24,7 +24,7 @@ Quagga.init({
       target: document.querySelector('#camera')    // Or '#yourElement' (optional)
     },
     decoder : {
-      readers : ["code_128_reader"]
+      readers : ["code_128_reader", "ean_reader"]
     }
   }, function(err) {
       if (err) {
@@ -38,7 +38,7 @@ Quagga.init({
         Quagga.onDetected(function(data){
 
                 console.log(data);
-
+            
                 document.querySelector('#resultado').innerHTML=data.codeResult.code;
 
 
