--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Quagga.init({
 
                 console.log(data);
             
-                document.querySelector('#resultado').innerHTML=data.codeResult.code;
+               // document.querySelector('#resultado').innerHTML=data.codeResult.code;
 
 
                 for (var i=0; i<=5;i++){
