--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Barkod Okuyucu</title>
 </head>
 <body>
-    
-    <div id="resultado"></div>
+    <!--		-->
+    <!--<div id="resultado"></div>-->
     <div id="camera"></div>
     <div id="resultado"></div>
 
