--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Quagga.init({
     inputStream : {
       name : "Live",
       type : "LiveStream",
-      target: document.querySelector('#camera')    // Or '#yourElement' (optional)
+      target: document.querySelector('#camera')   
     },
     decoder : {
       readers : ["code_128_reader", "ean_reader"]
