--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!--<div id="resultado"></div>-->
 	
 	
-	
+	<br>
+	<br>
     <div id="camera"></div>
     
 
@@ -55,9 +56,8 @@ Quagga.init({
 
                 for (var i=0; i<=5;i++){
 
-                    document.querySelector('#resultado').innerHTML=data.codeResult.code;
-					'<br>'
-
+                    document.querySelector('#resultado <br>').innerHTML=data.codeResult.code;
+					
                 }
 
 
