--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <!--		-->
 	
 	
-	<div id="resultado"></div>
+	<div id="resultado1"></div>
+	<div id="resultado2"></div>
+	<div id="resultado3"></div>
+	<div id="resultado4"></div>
+	<div id="resultado5"></div>
     <!--<div id="resultado"></div>-->
 	
 	
@@ -56,7 +60,11 @@ Quagga.init({
 
                 for (var i=0; i<=5;i++){
 
-                    document.querySelector('#resultado <br>').innerHTML=data.codeResult.code;
+                    document.querySelector('#resultado1').innerHTML=data.codeResult.code;
+					document.querySelector('#resultado2').innerHTML=data.codeResult.code;
+					document.querySelector('#resultado3').innerHTML=data.codeResult.code;
+					document.querySelector('#resultado4').innerHTML=data.codeResult.code;
+					document.querySelector('#resultado5').innerHTML=data.codeResult.code;
 					
                 }
 
