--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ Quagga.init({
             
                // document.querySelector('#resultado').innerHTML=data.codeResult.code;
 					document.querySelector('#resultado1').innerHTML=data.codeResult.code;
+			
+					var para = document.createElement("<br>");
 					document.querySelector('#resultado2').innerHTML=data.codeResult.code;
 					document.querySelector('#resultado3').innerHTML=data.codeResult.code;
 					document.querySelector('#resultado4').innerHTML=data.codeResult.code;
