--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ Quagga.init({
 					document.querySelector('#resultado1').innerHTML=data.codeResult.code;
 			
 					var para = document.createElement("<br>");
+			var node = document.createTextNode("This is new.");
+para.appendChild(node);
 					document.querySelector('#resultado2').innerHTML=data.codeResult.code;
 					document.querySelector('#resultado3').innerHTML=data.codeResult.code;
 					document.querySelector('#resultado4').innerHTML=data.codeResult.code;
