--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Quagga.init({
 		
         Quagga.onDetected(function(data4,data5,data1,data2,data3){
 
-                console.log(data);
+                console.log(data1);
             
                // document.querySelector('#resultado').innerHTML=data.codeResult.code;
 					document.querySelector('#resultado1').innerHTML=data1.codeResult.code;
