--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ Quagga.init({
 		
 		
 			
+			
 			Quagga.onDetected(function(data1){
             
                // document.querySelector('#resultado').innerHTML=data.codeResult.code;
@@ -70,6 +71,7 @@ Quagga.init({
 				if(sayac==5){
 				   				//Okuma işlemi oldugunda 
 					document.querySelector('#resultad1').innerHTML=data1.codeResult.code;
+					break;
 				   }
 				//document.querySelector('#resultad4').innerHTML=data1.codeResult.code;. tone
 
