--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ Quagga.init({
                // document.querySelector('#resultado').innerHTML=data.codeResult.code;
 			   //document.querySelector('#resultado1').innerHTML=data1.codeResult.code;
 				
+				sayac++;
 				
 				if(sayac==100){
 				   				//Okuma işlemi oldugunda 
