--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Quagga.init({
           return
       }
       console.log("Initialization finished. Ready to start");
+	document.querySelector('#resultado1').innerHTML="okunuyorr";
 	
       Quagga.start();
 	
