--- a/index.html
+++ b/index.html
@@ -120,16 +120,24 @@
             barkodlar[sayac] = data.codeResult.code;
             document.querySelector('#resultado1').innerHTML = data.codeResult.code;
 
-            document.querySelector('#resultado2').innerHTML = barkodlar[sayac];
+           
 
 
         });
 
 
+;
 
 
+let temp;
+        const card_hareket = setInterval(function () {
+
+if(data.codeResult.code){
+    document.querySelector('#resultado2').innerHTML = "1";
+}
 
 
+         }, 200);
 
 
 
