--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@ let temp;
 if(data.codeResult.code){
     document.querySelector('#resultado2').innerHTML = "1";
 }
+else{
+    document.querySelector('#resultado2').innerHTML = "0";
+}
 
 
          }, 200);
