--- a/index.html
+++ b/index.html
@@ -119,19 +119,11 @@
 
             barkodlar[sayac] = data.codeResult.code;
             document.querySelector('#resultado1').innerHTML = data.codeResult.code;
+            if(data.codeResult.code)
+            {
+                console.log("a");
+            }
 
-            let temp;
-            const card_hareket = setInterval(function () {
-
-                if (data.codeResult.code) {
-                    document.querySelector('#resultado2').innerHTML = "1";
-                }
-                else {
-                    document.querySelector('#resultado2').innerHTML = "0";
-                }
-
-
-            }, 200);
 
 
         });
