--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
             {
                 console.log("a");
             }
+            else{
+                console.log("b");
+            }
 
 
 
