--- a/index.html
+++ b/index.html
@@ -121,11 +121,9 @@
             document.querySelector('#resultado1').innerHTML = data.codeResult.code;
             if(data.codeResult.code)
             {
-                console.log("a");
+                document.querySelector('#resultado2').innerHTML = "1";
             }
-            else{
-                console.log("b");
-            }
+            
 
 
 
