--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         let dizi = [];
         let index = 0;
         let n = 0;
+        let sayac=0;
         Quagga.onDetected(function (data) {
 
             // document.querySelector('#resultado').innerHTML=data.codeResult.code;
