--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     dizi.push(data.codeResult.code);
                     index++;
                     document.querySelector('#resultado2').innerHTML = index;
-                    
+                    break;
 
                 }
 
