--- a/index.html
+++ b/index.html
@@ -134,8 +134,11 @@
                     dizi.push(data.codeResult.code);
                     index++;
                     document.querySelector('#resultado2').innerHTML = index;
-                    break;
+                    
 
+                }
+                else{
+                    break;
                 }
 
 
