--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 }
                 else{
-                    break;
+                    Quagga.stop();
                 }
 
 
@@ -146,9 +146,6 @@
             }
             
            
-
-
-
 
         });
 
