--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
             barkodlar[sayac] = data.codeResult.code;
             document.querySelector('#resultado1').innerHTML = data.codeResult.code;
 
-            if (data.codeResult.code) {
-                if (index <= 10) {
+            if (data.codeResult.code) 
+            {
+                if (index <= 10) 
+                {
                     index++;
                     dizi.push(data.codeResult.code);
                     
@@ -155,24 +157,24 @@
 
 
                     for(i=0;i<=10;i++)
-{
-    document.querySelector('#resultado3').innerHTML = "kontrol="+kontrol;
-    kontrol++;
-    if(dizi[i]==dizi[kontrol]){
-        sayac1++;
-        document.querySelector('#resultado4').innerHTML = "sayac1="+sayac1;
-        saban=dizi[i];
-        yeniDizi.push(saban);
-        document.querySelector('#resultado5').innerHTML = "saban= "+saban;
+                        {
+                            document.querySelector('#resultado3').innerHTML = "kontrol="+kontrol;
+                             kontrol++;
+                                if(dizi[i]==dizi[kontrol]){
+                                    sayac1++;
+                                    document.querySelector('#resultado4').innerHTML = "sayac1="+sayac1;
+                                    saban=dizi[i];
+                                    yeniDizi.push(dizi[i]);
+                                    document.querySelector('#resultado5').innerHTML = "saban= "+saban;
 
 
-            for(j=0;j<=10;j++)
-            {
-                kontrol2++;
-                if(yeniDizi[j]==yeniDizi[kontrol2])
-                {
-                    saban2=yeniDizi[j];
-                    document.querySelector('#resultado6').innerHTML = "saban2= "+saban2;
+                                         for(j=0;j<=10;j++)
+                                            {
+                                                kontrol2++;
+                                                     if(yeniDizi[j]==yeniDizi[kontrol2])
+                                                        {
+                                                            saban2=yeniDizi[j];
+                                                            document.querySelector('#resultado6').innerHTML = "saban2= "+saban2;
 
                 }
             }
